tests/paczka1/fuzzy1/48410224.err
Error in line 2: cfeBD A283 98,95
Error in line 13: egYpE A470 51,65
Error in line 7: OmQktr5KPxg A433 53,3
Error in line 31: XYAP S887 84,0
